Fix Bug #59197 double quote in field comment prevents foreign key constraint creation

rb://557 Approved by Sunny Bains